Fix error message shifting selectors for TPR/TIR Periods;
When displaying error messages it would move/shift the selectors

for month day selector up. displaying the error messages under both

MonthDaySelectors;

Jira ticket: CAMS-714

--- a/user-interface/src/trustees/forms/EditUpcomingReportDates.scss
+++ b/user-interface/src/trustees/forms/EditUpcomingReportDates.scss
@@ -3,11 +3,18 @@
     max-width: 308px;
   }
 
+  .review-period-group {
+    max-width: 308px;
+
+    .date-error {
+      padding-top: 0.5rem;
+    }
+  }
+
   .review-period-row {
     display: flex;
     align-items: flex-end;
     gap: 0.5rem;
-    max-width: 308px;
 
     .usa-form-group {
       max-width: none;
